# learn-transform

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.cursor/rules/: coding-standards.mdc  development-workflow.mdc  project-structure.mdc  ruff-usage.mdc  transformer-specific.mdc
src/basics/: 01_transformer_architecture.py  02_tokenization.py  03_pretrained_models.py  04_model_loading_saving.py  05_configuration_objects.py
src/models/: 01_text_classification.py
